--- a/index.html
+++ b/index.html
@@ -178,22 +178,22 @@
 <body>
     <div class="row text-center d-flex justify-content-center align-items-center logo-section pt-5">
         <div class="col-12 col-md-3 img-section">
-            <a href="http://sport-cafe.ubc-systems.tech/">
+            <a href="/sport-cafe/index.html">
                 <img class="img-style" src="images/sport.png" alt="Sport Café" />
             </a>
         </div>
         <div class="col-12 col-md-3 img-section">
-            <a href="https://olive.ubc-systems.tech/">
+            <a href="/olive-2/index.html">
                 <img class="img-style olive" src="images/olive.png" alt="Olive" />
             </a>
         </div>
         <div class="col-12 col-md-3 img-section">
-            <a href="http://sallatalasmak.ubc-systems.tech/">
+            <a href="/al-asmak/index.html">
                 <img class="img-style img-padding" src="images/sallat.png" alt="Sallat Al Asmak" />
             </a>
         </div>
         <div class="col-12 col-md-3 img-section">
-            <a href="https://lobby.ubc-systems.tech/">
+            <a href="/lobby/index.html">
                 <img class="img-style lobby" src="images/lobby.png" alt="lobby" />
             </a>
         </div>
